--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "braft-editor": "^2.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
