--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     ],
     "module": "ESNext",
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
